; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_spa_stats.c_spa_txg_history_set_io.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_spa_stats.c_spa_txg_history_set_io.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { %struct.TYPE_10__ }
%struct.TYPE_10__ = type { %struct.TYPE_14__ }
%struct.TYPE_14__ = type { %struct.TYPE_11__ }
%struct.TYPE_11__ = type { i32, i32 }
%struct.TYPE_12__ = type { i64, i64, i64, i64, i64, i64 }

@ENOENT = common dso_local global i32 0, align 4
@zfs_txg_history = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_13__*, i64, i64, i64, i64, i64, i64)* @spa_txg_history_set_io to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spa_txg_history_set_io(%struct.TYPE_13__* %0, i64 %1, i64 %2, i64 %3, i64 %4, i64 %5, i64 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_13__*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca %struct.TYPE_14__*, align 8
  %17 = alloca %struct.TYPE_12__*, align 8
  %18 = alloca i32, align 4
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %9, align 8
  store i64 %1, i64* %10, align 8
  store i64 %2, i64* %11, align 8
  store i64 %3, i64* %12, align 8
  store i64 %4, i64* %13, align 8
  store i64 %5, i64* %14, align 8
  store i64 %6, i64* %15, align 8
  %19 = load %struct.TYPE_13__*, %struct.TYPE_13__** %9, align 8
  %20 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %20, i32 0, i32 0
  store %struct.TYPE_14__* %21, %struct.TYPE_14__** %16, align 8
  %22 = load i32, i32* @ENOENT, align 4
  store i32 %22, i32* %18, align 4
  %23 = load i64, i64* @zfs_txg_history, align 8
  %24 = icmp eq i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %7
  store i32 0, i32* %8, align 4
  br label %73

26:                                               ; preds = %7
  %27 = load %struct.TYPE_14__*, %struct.TYPE_14__** %16, align 8
  %28 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %28, i32 0, i32 0
  %30 = call i32 @mutex_enter(i32* %29)
  %31 = load %struct.TYPE_14__*, %struct.TYPE_14__** %16, align 8
  %32 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %32, i32 0, i32 1
  %34 = call %struct.TYPE_12__* @list_tail(i32* %33)
  store %struct.TYPE_12__* %34, %struct.TYPE_12__** %17, align 8
  br label %35

35:                                               ; preds = %61, %26
  %36 = load %struct.TYPE_12__*, %struct.TYPE_12__** %17, align 8
  %37 = icmp ne %struct.TYPE_12__* %36, null
  br i1 %37, label %38, label %67

38:                                               ; preds = %35
  %39 = load %struct.TYPE_12__*, %struct.TYPE_12__** %17, align 8
  %40 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = load i64, i64* %10, align 8
  %43 = icmp eq i64 %41, %42
  br i1 %43, label %44, label %60

44:                                               ; preds = %38
  %45 = load i64, i64* %11, align 8
  %46 = load %struct.TYPE_12__*, %struct.TYPE_12__** %17, align 8
  %47 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %46, i32 0, i32 5
  store i64 %45, i64* %47, align 8
  %48 = load i64, i64* %12, align 8
  %49 = load %struct.TYPE_12__*, %struct.TYPE_12__** %17, align 8
  %50 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %49, i32 0, i32 4
  store i64 %48, i64* %50, align 8
  %51 = load i64, i64* %13, align 8
  %52 = load %struct.TYPE_12__*, %struct.TYPE_12__** %17, align 8
  %53 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %52, i32 0, i32 3
  store i64 %51, i64* %53, align 8
  %54 = load i64, i64* %14, align 8
  %55 = load %struct.TYPE_12__*, %struct.TYPE_12__** %17, align 8
  %56 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %55, i32 0, i32 2
  store i64 %54, i64* %56, align 8
  %57 = load i64, i64* %15, align 8
  %58 = load %struct.TYPE_12__*, %struct.TYPE_12__** %17, align 8
  %59 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %58, i32 0, i32 1
  store i64 %57, i64* %59, align 8
  store i32 0, i32* %18, align 4
  br label %67

60:                                               ; preds = %38
  br label %61

61:                                               ; preds = %60
  %62 = load %struct.TYPE_14__*, %struct.TYPE_14__** %16, align 8
  %63 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %62, i32 0, i32 0
  %64 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %63, i32 0, i32 1
  %65 = load %struct.TYPE_12__*, %struct.TYPE_12__** %17, align 8
  %66 = call %struct.TYPE_12__* @list_prev(i32* %64, %struct.TYPE_12__* %65)
  store %struct.TYPE_12__* %66, %struct.TYPE_12__** %17, align 8
  br label %35

67:                                               ; preds = %44, %35
  %68 = load %struct.TYPE_14__*, %struct.TYPE_14__** %16, align 8
  %69 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %68, i32 0, i32 0
  %70 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %69, i32 0, i32 0
  %71 = call i32 @mutex_exit(i32* %70)
  %72 = load i32, i32* %18, align 4
  store i32 %72, i32* %8, align 4
  br label %73

73:                                               ; preds = %67, %25
  %74 = load i32, i32* %8, align 4
  ret i32 %74
}

declare dso_local i32 @mutex_enter(i32*) #1

declare dso_local %struct.TYPE_12__* @list_tail(i32*) #1

declare dso_local %struct.TYPE_12__* @list_prev(i32*, %struct.TYPE_12__*) #1

declare dso_local i32 @mutex_exit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
